force-app/main/default/objects/Krow__QB_Integration_Detail__c/Krow__QB_Integration_Detail__c.object-meta.xml
<CustomObject>
    <description>Object to check Quick Book Credentials</description>
    <label>QB Integration Detail</label>
    <nameField>
        <label>QB Integration Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Integration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>