force-app/main/default/objects/Krow__QB_Integration_Detail__c/fields/Krow__Access_Token_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Access_Token_Issue_Date__c</fullName>
    <label>Access Token Issue Date</label>
    <type>Date</type>
</CustomField>