force-app/main/default/objects/Krow__QB_Integration_Detail__c/fields/Krow__Access_Token_Secret__c.field-meta.xml
<CustomField>
    <fullName>Krow__Access_Token_Secret__c</fullName>
    <label>Access Token Secret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>