force-app/main/default/objects/Krow__QB_Integration_Detail__c/fields/Krow__API_Sandbox_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__API_Sandbox_Url__c</fullName>
    <label>API Url</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>