force-app/main/default/objects/Krow__QB_Integration_Detail__c/fields/Krow__Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Krow__Consumer_Key__c</fullName>
    <label>Consumer Key</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>