force-app/main/default/objects/Krow__QB_Integration_Detail__c/fields/Krow__Enable_QBintegration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_QBintegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable QBintegration</label>
    <type>Checkbox</type>
</CustomField>