force-app/main/default/objects/Krow__QB_Integration_Detail__c/fields/Krow__QB_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__QB_Company_Id__c</fullName>
    <label>QB Company Id</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>