force-app/main/default/objects/Krow__QB_Integration_Detail__c/fields/Krow__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Krow__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>