force-app/main/default/objects/Krow__QB_Integration_Detail__c/fields/Krow__Renew_Token_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__Renew_Token_Url__c</fullName>
    <label>Renew Token Url</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>